<resources>
    <string name="app_name">SmartStock</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">stock ticker/symbol</string>
    <string name="title_activity_search">Search</string>
    <string name="search_title">Search Symbol</string>
    <string name="title_activity_stock_detail">Stock Detail</string>
    <string name="title_activity_portfolio">Portfolio</string>
    <string name="api_URL">https://api.url.com</string>
    <string name="label_symbol">Symbol</string>
    <string name="market_summary">Market Summary</string>
    <string name="Network_Error_Prompt">Error getting data over network</string>
    <string name="Error_Loading_Detail">Could not display the result</string>
    <string name="notification_message">Message</string>
    <string name="Channel">SmartStockChannel</string>
    <string name="search_result_image_displayed_here">search result image displayed here</string>
    <string name="add_widget">Add widget</string>
    <string name="label_price">Price</string>
    <string name="label_change">Change(%)</string>
    <string name="label_summary">Summary</string>
    <string name="content_description">Displays the chart for a day</string>
    <string name="add_portfolio">Add Portfolio</string>
    <string name="remove_portfolio">Remove Portfolio</string>
    <string name="content_description_add_remove_portfolio">Adds or remove stock from @string/title_activity_portfolio</string>
    <string name="label_quantity">Quantity</string>
    <string name="stock_not_found">No stock found</string>
    <string name="search_summary">Search Summary</string>
    <string name="portfolio_list">Portfolio List</string>
    <string name="default_quantity">1</string>
    <string name="text_portfolio_summary">Portfolio Summary</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_update">Update</string>
    <string name="title_exit">Exit</string>
    <string name="deault_symbol">symbol</string>
    <string name="default_price">price</string>
    <string name="default_change">change</string>
    <string name="default_summary">summary</string>
    <string name="text_viewholder_index">ViewHolder index:</string>
    <string name="msg_setting_shown">Settings is shown</string>
    <string name="msg_update">It may take a while. Symbols will be updated</string>
    <string name="msg_search_handled">Search is handled</string>
    <string name="msg_portfolio_shown">Portfolio is shown</string>
    <string name="msg_existing">Exiting SmartStock</string>
    <string name="msg_update_completed">Update completed</string>
    <string name="text_searching">Searching:</string>
    <string name="database_is_not_open">The database should be open and isn\'t</string>
    <string name="label_from">From:</string>
    <string name="label_message_data_payload">Message data payload:</string>
    <string name="msg_app_updating">App updating...</string>
    <string name="msg_notificaiton_body">Message Notification Body:</string>
    <string name="msg_Message">Message</string>
    <string name="key_message">MESSAGE</string>
    <string name="title_admin_message">Admin Message</string>
    <string name="label_viewholder_index">ViewHolder index:</string>
    <string name="label_emailtype">text/email</string>
    <string name="label_developer_contat_email">benktesh1@gmail.com</string>
    <string name="label_feedback_subject">SmartStock Feedback</string>
    <string name="label_address_developer">Dear Developer Name,</string>
    <string name="label_send_feedback">Send Feedback:</string>
    <string name="pattern_hhmm">hh:mm</string>
    <string name="msg_logo_url">Logo URL:</string>
</resources>
