<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="benktesh.smartstock.MainActivity">
    <item
        android:id="@+id/action_portfolio"
        android:orderInCategory="90"
        android:title="@string/title_portfolio"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="91"
        android:title="@string/title_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="101"
        android:title="@string/title_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_title"
        app:actionViewClass="android.widget.SearchView"

        app:showAsAction="always" />


</menu>
