<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:textColor="@android:color/white"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="5"
    tools:showIn="@layout/fragment_main">

    <TextView
        android:id="@+id/search_result_symbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_symbol" />

    <TextView
        android:id="@+id/search_result_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_price" />

    <TextView
        android:id="@+id/search_result_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_change" />

    <TextView
        android:id="@+id/search_result_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/label_summary" />
    <!--
                <ImageView
                    android:id="@+id/search_result_image"
                    android:layout_width="0dp"
                    android:contentDescription="@string/search_result_image_displayed_here"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />-->

</LinearLayout>