<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="stock"
            type="benktesh.smartstock.Model.Stock" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/generic"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".UI.StockDetailActivity"
        tools:showIn="@layout/activity_stockdetail">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Stock Logic -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"

                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <ImageView
                    android:id="@+id/stock_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/stock_symbol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/generic"
                    android:text="@{stock.Symbol}"
                    tools:text="ARR" />


                <TextView
                    android:id="@+id/label_stock_change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_change" />

                <TextView
                    android:id="@+id/stock_change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/generic"
                    android:text="@{Double.toString(safeUnbox(stock.Change))}"
                    tools:text="1.00" />


            </LinearLayout>

            <!-- PortFolio Logic -->
            <LinearLayout
                android:id="@+id/stockdetail_portfolio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@={stock.InPortoflio}"
                    android:clickable="true"
                    android:contentDescription="@string/content_description_add_remove_portfolio"
                    android:fadingEdge="horizontal|vertical"
                    android:focusable="true"
                    android:onClick="onTogglePortfolio"
                    android:textOff="@string/add_portfolio"
                    android:textOn="@string/remove_portfolio" />

                <TextView
                    android:id="@+id/label_portfolio_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_quantity" />
                <!-- Quantity is always one at this stage -->
                <TextView
                    android:id="@+id/plain_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1" />
            </LinearLayout>
        </LinearLayout>

        <!--Short Chart -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph_stock_detail"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:contentDescription="@string/content_description" />
        </LinearLayout>


    </LinearLayout>

</layout>